client module now has integration tests, which allow the usage of a CouchDB instance for tests