@@ -15,6 +15,10 @@ buildscript {
         ioLibVersion = 'cc13e29d6d'
         okhttpVersion = "4.9.2" // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
         couchdbJavaVersion = 'c109c8ead8'
+        dockerComposePluginVersion = "0.14.3"
+    }
+    dependencies {
+        classpath "com.avast.gradle:gradle-docker-compose-plugin:$dockerComposePluginVersion"
     }
 }
 
@@ -144,12 +148,31 @@ project(":common"){
 }
 project(":client"){
     apply plugin: 'java'
+    apply plugin: 'docker-compose'
     dependencies {
         api project(":core")
         api project(":common")
         api project(":serviceapi")
         api project(":action-node")
         annotationProcessor project(":process-annotations")
+    }
+    test {
+        useJUnitPlatform {
+            excludeTags 'integration'
+        }
+    }
+    task integration(type: Test) {
+        useJUnitPlatform {
+            includeTags 'integration'
+        }
+        if(JavaVersion.current() >= JavaVersion.VERSION_1_9) {
+            // If we don't have this, we get warnings for something about retrofit2.Platform
+            jvmArgs "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
+        }
+    }
+    dockerCompose {
+        useComposeFiles = ['../testing/couchdb-compose.yml']
+        isRequiredBy integration
     }
 }
 project(":serviceapi"){
